--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
- 
+
+
+.bigImage{
+   background-image: url("./images/background2.jpg");
+   min-height: 380px;
+   background-position:center;
+   background-repeat: no-repeat;
+   background-size:cover;
+   position: relative;
+
+  
+}
+
+.nav-link{
+  font-size: large;
+}
  .navbar-collapse{
   text-align: center;
   margin-right: 20%;
@@ -86,6 +101,16 @@
     text-align: center;
   }
 
+  .hinnasto{
+    
+    background-color: #fbeaea;
+    text-align: center;
+    margin-top: 3%;
+    font-size: large;
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
+
   .card{
     border-radius: 30px;
     background-color: #fbeaea;
@@ -96,12 +121,21 @@
   }
   .card:hover{
     background-color:#ffcccc
+    
   }
   .cardDiv{
-    margin: 0 auto; /* Added */
-    float: none; /* Added */
+    margin: 0 auto;
+    float: none; 
   }
   .cardRow{    
     margin-left: 8%;
     margin-right: 8%;
+  }
+  .cardImage{
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    overflow: hidden;
+    max-width: 100%;
+    height: 10%;
+    opacity: 0.5;
   }
