--- a/style.css
+++ b/style.css
@@ -75,6 +75,17 @@
     height: 350px;
     
   }
+  .carousel-inner {
+    border-radius: 5%;
+    background-color: rgba(0,0,0,0);
+    overflow: hidden;
+}
+  .productImage{
+    border-radius: 5%;
+    width:100%;
+    height: 500px;
+    
+  }
 
   .infoText{
     text-align: center;
@@ -104,7 +115,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    
+    width:34%;
   }
   .ajanVaraus:hover{
     opacity: 0.7;
@@ -254,6 +265,9 @@
     height: 250px;
     
   }
+  .ajanVaraus{
+    width:80%;
+  }
 
 }
 
@@ -268,10 +282,14 @@
   .mobileText{
     text-align: left;
   }
+
+  .buttonCenter{
+    margin-left: 1%;
+  }
 }
-.buttonCenter{
-  margin-left: 1%;
-}
+
+
+
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .cardPrice{
