Update Domain files to Github
All small updates from domain

--- a/style.css
+++ b/style.css
@@ -80,12 +80,6 @@
     background-color: rgba(0,0,0,0);
     overflow: hidden;
 }
-  .productImage{
-    border-radius: 5%;
-    width:100%;
-    height: 500px;
-    
-  }
 
   .infoText{
     text-align: center;
@@ -210,6 +204,12 @@
 }
 
 .img-comp-container {
+  position: relative;
+  height: 250px; /*should be the same height as the images*/
+  overflow: hidden;
+  width: 300px;
+}
+.img-comp-container2 {
   position: relative;
   height: 200px; /*should be the same height as the images*/
   overflow: hidden;
